Test/errors/err_vararg_forward_not_variadic.cb
// Verify that '...' forwarding is rejected in a non-variadic function.
expect_error("'...' forwarding can only be used inside a variadic function") {
    void nonVariadic(const char* fmt) { vprintf(fmt, ...); }
}

extern int main() { return 0; }
